Implementado HATEOAS para os métodos do service